--- a/src/pug/mitra-laporan-kronologi.pug
+++ b/src/pug/mitra-laporan-kronologi.pug
@@ -1,13 +1,13 @@
 ---
-title: User - Dashboard
-currentUrl: user-riwayat-kronologi
+title: Mitra - Dashboard
+currentUrl: mitra-laporan-kronologi
 category: laporan
-header: Riwayat Kronologi
+header: Kronologi
 ---
 extends layouts/layout
 block header
   include partials/header-dashboard
-  include partials/sidebar-user
+  include partials/sidebar-mitra
 block content
   +main_dashboard()
     .d-flex.flex-column.gap-5
