--- a/src/pug/user-kebutuhan-izin.pug
+++ b/src/pug/user-kebutuhan-izin.pug
@@ -43,7 +43,7 @@ block content
             button.btn.btn-primary
               span Tampilkan
 
-      .div
+      div
         .row.g-2
           .col-auto
             .bg-light.p-4
