--- a/src/pug/user-schedule-permit.pug
+++ b/src/pug/user-schedule-permit.pug
@@ -43,7 +43,7 @@ block content
             button.btn.btn-primary
               span Tampilkan
           div
-            button.btn.border.text-success
+            button.btn.btn-outline-success
               +bx('bx-export')
               span Export Excel
       .border.rounded
