--- a/src/pug/mitra-jadwal-detail.pug
+++ b/src/pug/mitra-jadwal-detail.pug
@@ -1,5 +1,5 @@
 ---
-title: User - Dashboard
+title: Mitra - Dashboard
 header: Jadwal Perizinan
 ---
 extends layouts/layout
@@ -8,11 +8,6 @@ block header
 block content
   .pb-5.mb-6
     .p-5.mb-5.d-flex.flex-column.gap-4
-      .py-1.px-2.bg-warning-subtle.text-warning.rounded
-        .d-flex.align-items-center.gap-2
-          span.d-flex.p-2
-            +bx('bx-info-circle')
-          p.mb-0.subtitle Jadwal izin hanya bisa di edit oleh Mitra Pengurus Izin, bukan oleh Anda. Mohon menunggu, jadwal izin Anda sedang disusun oleh Mitra Lisensia
       .d-flex.gap-4.align-items-end
         .flex-grow-1
           label.form-label(for='pemohon') Pemohon
@@ -24,15 +19,6 @@ block content
           select#filter.select.right(name="filter")
             option(value="" data-display="Filter") Filter
             option(value="filter 1") Filter 1
-        div
-          button.btn.btn-outline-success(type="button")
-            +bx('bx-export')
-            span Export
-      .py-1.px-2.bg-primary-subtle.text-primary.rounded
-        .d-flex.align-items-center.gap-2
-          span.d-flex.p-2
-            +bx('bx-info-circle')
-          p.mb-0.subtitle Silakan kunci jadwal izin, agar Mitra Lisensia segera dapat bekerja sesuai dengan jadwal yang telah Anda kunci. Namun apabila ada permintaan perubahan jadwal dari Mitra Lisensia, maka Anda dapat membuka kunci jadwal. Anda cukup memperhatikan Jadwal Pelaksanaan yang akan dibandingkan dengan jadwal rencana
       .border.rounded
         table.table.table-striped.striped-custom
           thead.subtitle.align-middle
@@ -70,12 +56,9 @@ block content
               td.py-3.ps-4(rowspan="2") IMB / PBG Rumah Tinggal
               td.py-3 -
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-1.btn-check(type='checkbox' autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-1')
-                    +bx("bx-lock-open-alt")
-                    span
+              td.py-3.cell-fit.text-center.bg-white
+                button.btn.text-primary(type="button" data-bs-toggle="modal" data-bs-target="#modal-ubah-jadwal")
+                  +bx('bx-pencil')
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -85,6 +68,9 @@ block content
             tr
               td.py-3 -
               td.py-3 Pelaksanaan
+              td.py-3.cell-fit.text-center.bg-white
+                button.btn.text-primary
+                  +bx('bx-pencil')
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -98,12 +84,9 @@ block content
               td.py-3.ps-4(rowspan="6") Izin Bongkar
               td.py-3.elipsis-cell(rowspan="2") 1. Pemasukan Berkas ke DPM PTSP
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-2.btn-check(type='checkbox' checked autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-2')
-                    +bx("bx-lock-open-alt")
-                    span
+              td.py-3.cell-fit.text-center.bg-white
+                button.btn.btn-primary(type="button")
+                  span Kunci Jadwal
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -112,6 +95,7 @@ block content
               td.py-3.cell-fit.text-center.bg-white.border-start
             tr
               td.py-3 Pelaksanaan
+              td.py-3.cell-fit.text-center.bg-white
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -121,12 +105,9 @@ block content
             tr
               td.py-3.elipsis-cell(rowspan="2") 2. Pengecekan administrasi & teknis oleh DPM PTSP
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-3.btn-check(type='checkbox' checked autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-3')
-                    +bx("bx-lock-open-alt")
-                    span
+              td.py-3.cell-fit.text-center.bg-white
+                button.btn.btn-outline-primary(type="button" data-bs-toggle="modal" data-bs-target="#modal-ubah-jadwal")
+                  | Buka Kunci
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -135,6 +116,7 @@ block content
               td.py-3.cell-fit.text-center.bg-white.border-start
             tr
               td.py-3 Pelaksanaan
+              td.py-3.cell-fit.text-center.bg-white
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -144,12 +126,7 @@ block content
             tr
               td.py-3.elipsis-cell(rowspan="2") 3. disposisi dari DPM PTSP ke Dinas Citata
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-4.btn-check(type='checkbox' checked autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-4')
-                    +bx("bx-lock-open-alt")
-                    span
+              td.py-3.cell-fit.text-center.bg-white
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -166,6 +143,26 @@ block content
               td.py-3.cell-fit.text-center.bg-white.border-start
         .p-4
 block modal
+  +modal_with_close('modal-ubah-jadwal','Form Ubah Jadwal')
+    .p-4.d-flex.flex-column.gap-4
+      div
+        .d-inline-flex.align-items-center.gap-4.p-3.bg-light.rounded-2
+          .subtitle Mode Manual
+          .form-switch.body-super
+            input#flexSwitchCheckChecked.form-check-input(type='checkbox' role='switch' checked='')
+      .datepicker
+        .action-item
+          .action-head.w-100
+            label.form-label(for='mulai') Tanggal Mulai
+            input.form-control.js-date-range(type="text" data-single-month="true" data-container=".js-date-container" value="12 Agustus 2023")
+          .action-body.w-100
+            .js-date-container
+      div
+        label.form-label(for='proses') Lama Proses (Hari)
+        input#proses.form-control(type="text")
+      div
+        label.form-label(for='selesai') Tanggal Selesai
+        input#selesai.form-control(type="text" disabled value="25-08-2023")
   +footer_back
     button.btn.btn-light.px-8(type="button") Cancel
     button.btn.btn-primary.ms-4.px-8(type="button") Save
