--- a/src/pug/mitra-laporan-jadwal.pug
+++ b/src/pug/mitra-laporan-jadwal.pug
@@ -1,18 +1,16 @@
 ---
 title: User - Dashboard
-header: Jadwal Perizinan
+currentUrl: mitra-laporan-jadwal
+category: laporan
+header: Jadwal
 ---
 extends layouts/layout
 block header
-  include partials/header-other
+  include partials/header-dashboard
+  include partials/sidebar-mitra
 block content
-  .pb-5.mb-6
-    .p-5.mb-5.d-flex.flex-column.gap-4
-      .py-1.px-2.bg-warning-subtle.text-warning.rounded
-        .d-flex.align-items-center.gap-2
-          span.d-flex.p-2
-            +bx('bx-info-circle')
-          p.mb-0.subtitle Jadwal izin hanya bisa di edit oleh Mitra Pengurus Izin, bukan oleh Anda. Mohon menunggu, jadwal izin Anda sedang disusun oleh Mitra Lisensia
+  +main_dashboard()
+    .d-flex.flex-column.gap-4
       .d-flex.gap-4.align-items-end
         .flex-grow-1
           label.form-label(for='pemohon') Pemohon
@@ -28,11 +26,6 @@ block content
           button.btn.btn-outline-success(type="button")
             +bx('bx-export')
             span Export
-      .py-1.px-2.bg-primary-subtle.text-primary.rounded
-        .d-flex.align-items-center.gap-2
-          span.d-flex.p-2
-            +bx('bx-info-circle')
-          p.mb-0.subtitle Silakan kunci jadwal izin, agar Mitra Lisensia segera dapat bekerja sesuai dengan jadwal yang telah Anda kunci. Namun apabila ada permintaan perubahan jadwal dari Mitra Lisensia, maka Anda dapat membuka kunci jadwal. Anda cukup memperhatikan Jadwal Pelaksanaan yang akan dibandingkan dengan jadwal rencana
       .border.rounded
         table.table.table-striped.striped-custom
           thead.subtitle.align-middle
@@ -40,11 +33,10 @@ block content
               td.py-3.ps-4 Jenis Izin
               td.py-3 Langkah-langkah
               td.py-3 Kontrol
-              td.py-3.cell-fit.text-center
               td.pe-4(colspan="6") Agustus
           tbody.body.align-middle
             tr
-              td.py-1.px-4(colspan="4")
+              td.py-1.px-4(colspan="3")
               td.py-1.cell-fit.text-center.bg-white.border-start
                 div 1
                 small Sen
@@ -64,18 +56,12 @@ block content
                 div 6
                 small Sab
             tr.table-info
-              td.py-3.ps-4.fw-bold(colspan="4") IMB Rumah Tinggal
+              td.py-3.ps-4.fw-bold(colspan="3") IMB Rumah Tinggal
               td(colspan="6")
             tr
               td.py-3.ps-4(rowspan="2") IMB / PBG Rumah Tinggal
               td.py-3 -
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-1.btn-check(type='checkbox' autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-1')
-                    +bx("bx-lock-open-alt")
-                    span
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -92,18 +78,12 @@ block content
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
             tr.table-info
-              td.py-3.ps-4.fw-bold(colspan="4") IMB Non Rumah Tinggal
+              td.py-3.ps-4.fw-bold(colspan="3") IMB Non Rumah Tinggal
               td(colspan="6")
             tr
               td.py-3.ps-4(rowspan="6") Izin Bongkar
               td.py-3.elipsis-cell(rowspan="2") 1. Pemasukan Berkas ke DPM PTSP
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-2.btn-check(type='checkbox' checked autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-2')
-                    +bx("bx-lock-open-alt")
-                    span
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -121,12 +101,6 @@ block content
             tr
               td.py-3.elipsis-cell(rowspan="2") 2. Pengecekan administrasi & teknis oleh DPM PTSP
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-3.btn-check(type='checkbox' checked autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-3')
-                    +bx("bx-lock-open-alt")
-                    span
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -144,12 +118,6 @@ block content
             tr
               td.py-3.elipsis-cell(rowspan="2") 3. disposisi dari DPM PTSP ke Dinas Citata
               td.py-3 Rencana
-              td.py-3.cell-fit.text-center.bg-white(rowspan="2")
-                div
-                  input#btn-check-4.btn-check(type='checkbox' checked autocomplete='off')
-                  label.btn.btn-lock.btn-sm(for='btn-check-4')
-                    +bx("bx-lock-open-alt")
-                    span
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.border-start.table-danger
@@ -164,8 +132,3 @@ block content
               td.py-3.cell-fit.text-center.border-start.table-danger
               td.py-3.cell-fit.text-center.bg-white.border-start
               td.py-3.cell-fit.text-center.bg-white.border-start
-        .p-4
-block modal
-  +footer_back
-    button.btn.btn-light.px-8(type="button") Cancel
-    button.btn.btn-primary.ms-4.px-8(type="button") Save
