--- a/src/pug/mitra-master-dokumen-proyek.pug
+++ b/src/pug/mitra-master-dokumen-proyek.pug
@@ -96,10 +96,142 @@ block content
                 +pagination
           #struktur-pane.tab-pane.fade(role='tabpanel' aria-labelledby='home-tab' tabindex='1')
             .p-4.d-flex.flex-column.gap-4
-              h2 Dokumen Struktur (No Figma)
+              .d-flex.justify-content-between.align-items-center
+                .rounded.px-2.py-3.gap-2.bg-primary-subtle.text-primary.subtitle.me-auto.d-flex.align-items-center
+                  .d-flex.align-items-center#home-tab
+                    +bx('bx-info-circle')
+                  span Mitra hanya dapat melihat data pemohon
+                .mb-0.position-relative
+                  input.form-control.ps-7(type='text' placeholder='Search')
+                  .position-absolute.top-0.start-0.d-flex.pt-2.px-2
+                    +bx('bx-search')
+              .d-flex.align-items-center.gap-2.rounded.bg-primary-subtle.p-2
+                .d-flex.p-2.text-primary
+                  +bx('bx-info-circle')
+                .subtitle.text-primary
+                  p.mb-0 Dokumen gambar dan dokumen pendukung yang diterbitkan oleh Konsultan Arsitek
+              .rounded.border
+                table.table.table-striped.striped-custom
+                  thead.subtitle.align-middle
+                    tr
+                      td Judul Dokumen Proyek
+                      td.text-center Ms. Office
+                      td.text-center PDF
+                      td.text-center CAD
+                      td Berlaku Sampai
+                      td Terakhir Diubah
+                      td.text-center
+                  tbody.body.align-middle
+                    each val in [1,2,3,4,5,6,7,8,9]
+                      tr
+                        td Dokumen Admin
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td kosong
+                        td kosong
+
+                +pagination
           #mep-pane.tab-pane.fade(role='tabpanel' aria-labelledby='home-tab' tabindex='2')
             .p-4.d-flex.flex-column.gap-4
-              h2 Dokumen MEP (No Figma)
+              .d-flex.justify-content-between.align-items-center
+                .rounded.px-2.py-3.gap-2.bg-primary-subtle.text-primary.subtitle.me-auto.d-flex.align-items-center
+                  .d-flex.align-items-center#home-tab
+                    +bx('bx-info-circle')
+                  span Mitra hanya dapat melihat data pemohon
+                .mb-0.position-relative
+                  input.form-control.ps-7(type='text' placeholder='Search')
+                  .position-absolute.top-0.start-0.d-flex.pt-2.px-2
+                    +bx('bx-search')
+              .d-flex.align-items-center.gap-2.rounded.bg-primary-subtle.p-2
+                .d-flex.p-2.text-primary
+                  +bx('bx-info-circle')
+                .subtitle.text-primary
+                  p.mb-0 Dokumen gambar dan dokumen pendukung yang diterbitkan oleh Konsultan Arsitek
+              .rounded.border
+                table.table.table-striped.striped-custom
+                  thead.subtitle.align-middle
+                    tr
+                      td Judul Dokumen Proyek
+                      td.text-center Ms. Office
+                      td.text-center PDF
+                      td.text-center CAD
+                      td Berlaku Sampai
+                      td Terakhir Diubah
+                      td.text-center
+                  tbody.body.align-middle
+                    each val in [1,2,3,4,5,6,7,8,9]
+                      tr
+                        td Dokumen Admin
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td kosong
+                        td kosong
+
+                +pagination
           #others-pane.tab-pane.fade(role='tabpanel' aria-labelledby='home-tab' tabindex='3')
             .p-4.d-flex.flex-column.gap-4
-              h2 Dokumen Lain-lain (No Figma)
+              .d-flex.justify-content-between.align-items-center
+                .rounded.px-2.py-3.gap-2.bg-primary-subtle.text-primary.subtitle.me-auto.d-flex.align-items-center
+                  .d-flex.align-items-center#home-tab
+                    +bx('bx-info-circle')
+                  span Mitra hanya dapat melihat data pemohon
+                .mb-0.position-relative
+                  input.form-control.ps-7(type='text' placeholder='Search')
+                  .position-absolute.top-0.start-0.d-flex.pt-2.px-2
+                    +bx('bx-search')
+              .d-flex.align-items-center.gap-2.rounded.bg-primary-subtle.p-2
+                .d-flex.p-2.text-primary
+                  +bx('bx-info-circle')
+                .subtitle.text-primary
+                  p.mb-0 Dokumen gambar dan dokumen pendukung yang diterbitkan oleh Konsultan Arsitek
+              .rounded.border
+                table.table.table-striped.striped-custom
+                  thead.subtitle.align-middle
+                    tr
+                      td Judul Dokumen Proyek
+                      td.text-center Ms. Office
+                      td.text-center PDF
+                      td.text-center CAD
+                      td Berlaku Sampai
+                      td Terakhir Diubah
+                      td.text-center
+                  tbody.body.align-middle
+                    each val in [1,2,3,4,5,6,7,8,9]
+                      tr
+                        td Dokumen Admin
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td.text-center
+                          button.btn.btn-light.rounded-pill
+                            +bx('bx-download')
+                            span Unduh
+                        td kosong
+                        td kosong
+
+                +pagination
