--- a/src/pug/layouts/mixins.pug
+++ b/src/pug/layouts/mixins.pug
@@ -54,7 +54,7 @@ mixin footer_back()
       a.btn.btn-primary(type="button" href="/")  Kembali Ke Dashboard
 
 mixin main_dashboard()
-  .p-5(style="margin-left:262px;margin-top:59px;")
+  #main-content.p-5.main-dashboard
     if block
       block
     else
