--- a/src/pug/partials/header-dashboard.pug
+++ b/src/pug/partials/header-dashboard.pug
@@ -1,4 +1,4 @@
-header.header.bg-white.d-flex.align-items-center.position-fixed.top-0.end-0.border-bottom.pe-5.ps-4(style="left: 262px;")
+header.header.bg-white.d-flex.align-items-center.position-fixed.top-0.end-0.border-bottom.pe-5.ps-4
   .me-auto.d-flex.align-items-center.gap-2.fw-semibold
     +bx('bx-menu')
     span= header || 'Dashboard'
