--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -192,3 +192,6 @@ input[type="checkbox"]:checked
   background-image: linear-gradient(180deg, #c8102e 0, #c8102e 50%, #FFF 50%, #FFF 100%)
 #editor
   height: 300px
+.main-dashboard
+  margin-left: 262px
+  margin-top: 59px
