--- a/src/pug/user-master-tanah.pug
+++ b/src/pug/user-master-tanah.pug
@@ -39,7 +39,7 @@ block content
               option(value='2') HK Realtindo PT
               option(value='3') Realtindo HK PT
               option(value='4') HK PT Realtindo
-          //- Fix DropDown
+          <!-- FixDropdownMenu -->
           .action-item
             button.btn.btn-light.p-2.elv-1.action-head(type="button")
               +bx('bx-dots-horizontal-rounded')
