new mitra dashboard

--- a/src/pug/admin-pengguna-form.pug
+++ b/src/pug/admin-pengguna-form.pug
@@ -14,7 +14,7 @@ block content
             div
               label.form-label(for='kategori') Kategori Pengguna
               select#kategori.select.wide(name="kategori")
-                option(value="" data-display="Pilih Group Pengguna") Pilih Group Pengguna
+                option(value="" data-display="Pilih Kategori Pengguna") Pilih Kategori Pengguna
                 option(value="limited") Limited
             div
               label.form-label(for='nama') Nama
