--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,3 +8,12 @@ block content
     a.btn.btn-primary(href="/user.html") Dashboard User
     a.btn.btn-primary(href="/admin.html") Dashboard Admin
     a.btn.btn-primary(href="/mitra.html") Dashboard Mitra
+  .p-5
+    .list-group
+      a.list-group-item.list-group-item-action.active(href='/mitra/dashboard.html' aria-current='true')
+        | Dashboard Mitra (New)
+      a.list-group-item.list-group-item-action(href='/mitra/dashboard.html') Dashboard
+      a.list-group-item.list-group-item-action(href='/mitra/dashboard-shortcut.html') Dashboard Shortcut
+      a.list-group-item.list-group-item-action(href='/mitra/dashboard-step-1.html') Dashboard Step 1
+      a.list-group-item.list-group-item-action(href='/mitra/dashboard-step-2.html') Dashboard Step 2
+      a.list-group-item.list-group-item-action(href='/mitra/dashboard-step-3.html') Dashboard Step 3
