--- a/src/pug/mitra/tambah-data-proyek.pug
+++ b/src/pug/mitra/tambah-data-proyek.pug
@@ -1,11 +1,11 @@
 ---
-title: User - Dashboard
-currentUrl: user-tambah-proyek
-header: Tambah Data Proyek
+title: "Mitra - Dashboard"
+currentUrl: "mitra/tambah-data-proyek"
+header: "Tambah Data Proyek"
 ---
-extends layouts/layout
+extends ../layouts/layout
 block header
-  include partials/header-other
+  include ../partials/header-other
 block content
   .pb-5.mb-6
     .container.py-5.mb-5
