--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -75,7 +75,7 @@
         --bs-nav-link-color: var(--bs-link-color)
         background-color: #EDF1F8
 .form-check
-  .form-check-input
+  .form-check-input[type="checkbox"]
     &:checked
       background-color: #fff
       --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%232882F5' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e")
@@ -195,3 +195,18 @@ input[type="checkbox"]:checked
 .main-dashboard
   margin-left: 262px
   margin-top: 59px
+.change-applicant
+  .btn.collapsed
+    --bs-btn-bg: #{$white}
+    --bs-text-opacity: 1
+    color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity))
+    .bx
+      display: none
+  .btn:not(.collapsed)
+    color: rgba(61, 64, 83, .4)
+    width: 100%
+    justify-content: space-between
+    .bx
+      color: rgba(61, 64, 83, .4)
+
+
